# alloy

./: Cargo.toml
src/: main.rs
src/checking/: errors.rs  globals.rs  mod.rs  scope.rs  types.rs
src/common/: ast.rs  expression.rs  mod.rs  peeker.rs  span.rs
src/lexer/: mod.rs  module.rs  src.rs  token.rs
src/lexing/: mod.rs  module.rs  token.rs
src/module/: mod.rs  module.rs  tree.rs
src/parser/: ast.rs  expression.rs  mod.rs  precedence.rs
src/parsing/: ast.rs  errors.rs  expression.rs  mod.rs  precedence.rs
src/span/: mod.rs
src/tests/: mod.rs
src/tests/cases/: block-exprs.alloy  function-calls.alloy  maths.alloy  numbers.alloy  syntax.alloy  types.alloy  variables.alloy
src/tests/snapshots/: alloy__tests__checking@block-exprs.alloy.snap  alloy__tests__checking@maths.alloy.snap  alloy__tests__checking@numbers.alloy.snap  alloy__tests__checking@types.alloy.snap  alloy__tests__lexing@block-exprs.alloy.snap  alloy__tests__lexing@function-calls.alloy.snap  alloy__tests__lexing@types.alloy.snap  alloy__tests__lexing@variables.alloy.snap  alloy__tests__parsing@block-exprs.alloy.snap  alloy__tests__parsing@function-calls.alloy.snap  alloy__tests__parsing@maths.alloy.snap  alloy__tests__parsing@numbers.alloy.snap  alloy__tests__parsing@types.alloy.snap  alloy__tests__parsing@variables.alloy.snap  alloy__tests__snapshot_tests-2.snap  alloy__tests__snapshot_tests.snap  alloy__tests__snapshot_tests.snap.new  alloy__tests__snapshot_tests@block-exprs.alloy-2.snap  alloy__tests__snapshot_tests@block-exprs.alloy-3.snap  (+15 more)
